[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://menu/setting-menu/map-setting/map_setting.gd" type="Script" id=2]

[node name="map_setting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer7" type="MarginContainer" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="Label5" type="Label" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 600.0
margin_bottom = 84.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Season"
align = 1
valign = 1

[node name="map_setting" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 600.0
margin_bottom = 178.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/map_setting"]
margin_right = 10.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="spring" type="Button" parent="VBoxContainer/map_setting"]
margin_left = 14.0
margin_right = 192.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Spring"

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/map_setting"]
margin_left = 196.0
margin_right = 206.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="winter" type="Button" parent="VBoxContainer/map_setting"]
margin_left = 210.0
margin_right = 389.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Winter"

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer/map_setting"]
margin_left = 393.0
margin_right = 403.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="antum" type="Button" parent="VBoxContainer/map_setting"]
margin_left = 407.0
margin_right = 586.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Antum"

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/map_setting"]
margin_left = 590.0
margin_right = 600.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer8" type="MarginContainer" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 600.0
margin_bottom = 222.0
rect_min_size = Vector2( 0, 40 )

[node name="Label6" type="Label" parent="VBoxContainer"]
margin_top = 226.0
margin_right = 600.0
margin_bottom = 266.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Map Size"
align = 1
valign = 1

[node name="map_setting2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 270.0
margin_right = 600.0
margin_bottom = 360.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/map_setting2"]
margin_right = 10.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="map_small_btn" type="Button" parent="VBoxContainer/map_setting2"]
margin_left = 14.0
margin_right = 192.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Small"

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/map_setting2"]
margin_left = 196.0
margin_right = 206.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="map_normal_btn" type="Button" parent="VBoxContainer/map_setting2"]
margin_left = 210.0
margin_right = 389.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Normal"

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer/map_setting2"]
margin_left = 393.0
margin_right = 403.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[node name="map_large_btn" type="Button" parent="VBoxContainer/map_setting2"]
margin_left = 407.0
margin_right = 586.0
margin_bottom = 90.0
rect_min_size = Vector2( 150, 90 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Large"

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/map_setting2"]
margin_left = 590.0
margin_right = 600.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 0 )

[connection signal="pressed" from="VBoxContainer/map_setting/spring" to="." method="_on_spring_pressed"]
[connection signal="pressed" from="VBoxContainer/map_setting/winter" to="." method="_on_winter_pressed"]
[connection signal="pressed" from="VBoxContainer/map_setting/antum" to="." method="_on_antum_pressed"]
[connection signal="pressed" from="VBoxContainer/map_setting2/map_small_btn" to="." method="_on_map_small_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/map_setting2/map_normal_btn" to="." method="_on_map_normal_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/map_setting2/map_large_btn" to="." method="_on_map_large_btn_pressed"]
